--- a/2_fullyconnected.ipynb
+++ b/2_fullyconnected.ipynb
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -588,17 +588,20 @@
     "    layer_name = 'layer%s' % n_layer\n",
     "    Weights = tf.Variable(tf.truncated_normal([in_size, out_size]), name='W')\n",
     "    biases = tf.Variable(tf.zeros([1, out_size]) + 0.1, name='b')\n",
-    "    outputs = tf.matmul(input_data, Weights) + biases\n",
+    "    Wx_plus_b = tf.matmul(input_data, Weights) + biases\n",
     "    if(activate_function is None):\n",
-    "        return outputs, Weights, biases\n",
+    "        outputs = Wx_plus_b\n",
     "    else:\n",
-    "        return activate_function(outputs), Weights, biases"
+    "        outputs = activate_function(Wx_plus_b)\n",
+    "    return outputs, Weights, biases"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 80,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "batch_size = 128\n",
@@ -617,7 +620,6 @@
     "    hidden_layer1, W1, b1 = add_layer(tf_train_dataset, image_size*image_size, hidden_unit_num1, n_layer=1, activate_function=tf.nn.relu)\n",
     "    train_output, W2, b2 = add_layer(hidden_layer1, hidden_unit_num1, num_labels, n_layer=2, activate_function=None)\n",
     "\n",
-    "    # loss = tf.reduce_mean(-tf.reduce_sum(train_labels_batch*tf.log(train_output), axis=[1]))\n",
     "    loss = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(labels=tf_train_labels, logits=train_output))\n",
     "    optimizer = tf.train.GradientDescentOptimizer(0.1).minimize(loss)\n",
     "\n",
