--- a/3_regularization.ipynb
+++ b/3_regularization.ipynb
@@ -232,8 +232,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 以下Problem 1的NN代码已经加入了L2正则化和dropout\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,6 +256,9 @@
     "            tf.summary.histogram(layer_name + '/biases', biases)\n",
     "        with tf.name_scope('Wx_plus_b'):\n",
     "            Wx_plus_b = tf.matmul(input_data, Weights) + biases\n",
+    "            # dropout\n",
+    "            Wx_plus_b = tf.nn.dropout(Wx_plus_b, keep_prob)\n",
+    "            \n",
     "        if(activate_function is None):\n",
     "            outputs = Wx_plus_b\n",
     "        else:\n",
@@ -258,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,31 +282,36 @@
     "with graph.as_default():\n",
     "\n",
     "    tf_valid_dataset = tf.constant(valid_dataset)\n",
+    "    tf_valid_labels = tf.constant(valid_labels)\n",
     "    tf_test_dataset = tf.constant(test_dataset)\n",
+    "    tf_test_labels = tf.constant(test_labels)\n",
     "\n",
     "    with tf.name_scope('inputs'):\n",
-    "        tf_train_dataset = tf.placeholder(tf.float32, shape=(batch_size, image_size*image_size), name='train_dataset')\n",
-    "        tf_train_labels = tf.placeholder(tf.float32, shape=(batch_size, num_labels), name='train_labels')\n",
-    "\n",
-    "    hidden_layer1, W1, b1 = add_layer(tf_train_dataset, image_size*image_size, hidden_unit_num1, n_layer=1, activate_function=tf.nn.relu)\n",
+    "        # Let the shape[0] equals None\n",
+    "        tf_dataset = tf.placeholder(tf.float32, shape=(None, image_size*image_size), name='train_dataset')\n",
+    "        tf_labels = tf.placeholder(tf.float32, shape=(None, num_labels), name='train_labels')\n",
+    "        # dropout rate\n",
+    "        keep_prob = tf.placeholder(tf.float32, name='keep_prob')\n",
+    "        \n",
+    "    hidden_layer1, W1, b1 = add_layer(tf_dataset, image_size*image_size, hidden_unit_num1, n_layer=1, activate_function=tf.nn.relu)\n",
     "    train_output, W2, b2 = add_layer(hidden_layer1, hidden_unit_num1, num_labels, n_layer=2, activate_function=None)\n",
     "\n",
     "    # L2 regularization, lambda = 0.02 is the best penalty rate\n",
     "    l2_loss = tf.nn.l2_loss(W1) + tf.nn.l2_loss(W2)\n",
     "    with tf.name_scope('loss'):\n",
-    "        loss = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(labels=tf_train_labels, logits=train_output)) + 0.02 * l2_loss\n",
+    "        loss = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(labels=tf_labels, logits=train_output)) + 0.02 * l2_loss\n",
     "    with tf.name_scope('train_optimizer'):\n",
     "        optimizer = tf.train.GradientDescentOptimizer(0.1).minimize(loss)\n",
     "\n",
     "    train_prediction = tf.nn.softmax(train_output)\n",
     "\n",
-    "    valid_hidden = tf.matmul(tf_valid_dataset, W1) + b1\n",
-    "    valid_output = tf.matmul(valid_hidden, W2) + b2\n",
-    "    valid_prediction = tf.nn.softmax(valid_output)\n",
+    "#     valid_hidden = tf.matmul(tf_valid_dataset, W1) + b1\n",
+    "#     valid_output = tf.matmul(valid_hidden, W2) + b2\n",
+    "#     valid_prediction = tf.nn.softmax(valid_output)\n",
     "\n",
-    "    test_hidden = tf.matmul(tf_test_dataset, W1) + b1\n",
-    "    test_output = tf.matmul(test_hidden, W2) + b2\n",
-    "    test_prediction = tf.nn.softmax(test_output)"
+    "#     test_hidden = tf.matmul(tf_test_dataset, W1) + b1\n",
+    "#     test_output = tf.matmul(test_hidden, W2) + b2\n",
+    "#     test_prediction = tf.nn.softmax(test_output)"
    ]
   },
   {
@@ -309,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -317,28 +333,28 @@
      "output_type": "stream",
      "text": [
       "Initialized...\n",
-      "Minibatch loss at step 0: 6730.554199\n",
-      "Minibatch accuracy: 10.2%\n",
-      "Validation accuracy: 20.6%\n",
-      "Minibatch loss at step 500: 845.142212\n",
-      "Minibatch accuracy: 85.2%\n",
-      "Validation accuracy: 60.3%\n",
-      "Minibatch loss at step 1000: 114.091057\n",
-      "Minibatch accuracy: 85.9%\n",
-      "Validation accuracy: 65.3%\n",
-      "Minibatch loss at step 1500: 15.994305\n",
-      "Minibatch accuracy: 85.9%\n",
-      "Validation accuracy: 80.9%\n",
-      "Minibatch loss at step 2000: 2.945396\n",
-      "Minibatch accuracy: 83.6%\n",
-      "Validation accuracy: 81.3%\n",
-      "Minibatch loss at step 2500: 1.141268\n",
-      "Minibatch accuracy: 78.9%\n",
-      "Validation accuracy: 82.0%\n",
-      "Minibatch loss at step 3000: 0.809437\n",
-      "Minibatch accuracy: 85.2%\n",
-      "Validation accuracy: 81.8%\n",
-      "Test accuracy: 88.4%\n"
+      "Minibatch loss at step 0: 7068.360352\n",
+      "Minibatch accuracy: 11.7%\n",
+      "Validation accuracy: 19.9%\n",
+      "Minibatch loss at step 500: 844.717102\n",
+      "Minibatch accuracy: 49.2%\n",
+      "Validation accuracy: 82.4%\n",
+      "Minibatch loss at step 1000: 114.174622\n",
+      "Minibatch accuracy: 42.2%\n",
+      "Validation accuracy: 83.5%\n",
+      "Minibatch loss at step 1500: 16.587553\n",
+      "Minibatch accuracy: 49.2%\n",
+      "Validation accuracy: 83.9%\n",
+      "Minibatch loss at step 2000: 3.516756\n",
+      "Minibatch accuracy: 53.1%\n",
+      "Validation accuracy: 83.4%\n",
+      "Minibatch loss at step 2500: 1.791932\n",
+      "Minibatch accuracy: 47.7%\n",
+      "Validation accuracy: 83.2%\n",
+      "Minibatch loss at step 3000: 1.519345\n",
+      "Minibatch accuracy: 51.6%\n",
+      "Validation accuracy: 83.2%\n",
+      "Test accuracy: 89.3%\n"
      ]
     }
    ],
@@ -356,15 +372,20 @@
     "        offset = (step * batch_size) % (train_labels.shape[0] - batch_size)\n",
     "        batch_data = train_dataset[offset:(offset + batch_size), :]\n",
     "        batch_labels = train_labels[offset:(offset + batch_size), :]\n",
-    "        feed_dict = {tf_train_dataset : batch_data, tf_train_labels : batch_labels}\n",
+    "        train_feed_dict = {tf_dataset : batch_data, tf_labels : batch_labels, keep_prob: 0.5}\n",
     "\n",
-    "        _, l, predictions = sess.run([optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
+    "        _, l, predictions = sess.run([optimizer, loss, train_prediction], feed_dict=train_feed_dict)\n",
+    "        \n",
+    "        valid_feed_dict = {tf_dataset: valid_dataset, tf_labels: valid_labels, keep_prob: 1.0}\n",
+    "#         valid_pred = sess.run(valid_prediction, feed_dict=valid_feed_dict)\n",
+    "        test_feed_dict = {tf_dataset: test_dataset, tf_labels: test_labels, keep_prob: 1.0}\n",
+    "#         test_pred = sess.run(test_prediction, feed_dict=test_feed_dict)\n",
     "        \n",
     "        if (step % 500 == 0):\n",
     "            print(\"Minibatch loss at step %d: %f\" % (step, l))\n",
     "            print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
-    "            print(\"Validation accuracy: %.1f%%\" % accuracy(valid_prediction.eval(), valid_labels))\n",
-    "    print(\"Test accuracy: %.1f%%\" % accuracy(test_prediction.eval(), test_labels))"
+    "            print(\"Validation accuracy: %.1f%%\" % accuracy(train_prediction.eval(feed_dict=valid_feed_dict), valid_labels))\n",
+    "    print(\"Test accuracy: %.1f%%\" % accuracy(train_prediction.eval(feed_dict=test_feed_dict), test_labels))"
    ]
   },
   {
@@ -383,8 +404,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 以下Problem 2的mini_dataset NN代码未加入dropout\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -403,10 +432,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 179,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "def add_layer(input_data, in_size, out_size, n_layer, activate_function=None):\n",
+    "    layer_name = 'layer%s' % n_layer\n",
+    "    with tf.name_scope(layer_name):\n",
+    "        with tf.name_scope('Weights'):\n",
+    "            Weights = tf.Variable(tf.truncated_normal([in_size, out_size]), name='W')\n",
+    "            tf.summary.histogram(layer_name + '/Weights', Weights)\n",
+    "        with tf.name_scope('biases'):\n",
+    "            biases = tf.Variable(tf.zeros([1, out_size]) + 0.1, name='b')\n",
+    "            tf.summary.histogram(layer_name + '/biases', biases)\n",
+    "        with tf.name_scope('Wx_plus_b'):\n",
+    "            Wx_plus_b = tf.matmul(input_data, Weights) + biases\n",
+    "            \n",
+    "        if(activate_function is None):\n",
+    "            outputs = Wx_plus_b\n",
+    "        else:\n",
+    "            outputs = activate_function(Wx_plus_b)\n",
+    "            tf.summary.histogram(layer_name + '/outputs', outputs)\n",
+    "        return outputs, Weights, biases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
    "outputs": [],
    "source": [
     "batch_size = 128\n",
@@ -448,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -456,25 +511,25 @@
      "output_type": "stream",
      "text": [
       "Initialized...\n",
-      "Minibatch loss at step 0: 6619.092773\n",
-      "Minibatch accuracy: 13.3%\n",
-      "Validation accuracy: 27.7%\n",
-      "Minibatch loss at step 500: 847.586243\n",
+      "Minibatch loss at step 0: 6692.252930\n",
+      "Minibatch accuracy: 10.2%\n",
+      "Validation accuracy: 23.2%\n",
+      "Minibatch loss at step 500: 847.342834\n",
       "Minibatch accuracy: 100.0%\n",
-      "Validation accuracy: 64.9%\n",
-      "Minibatch loss at step 1000: 114.591621\n",
+      "Validation accuracy: 66.9%\n",
+      "Minibatch loss at step 1000: 114.558884\n",
       "Minibatch accuracy: 100.0%\n",
-      "Validation accuracy: 69.3%\n",
-      "Minibatch loss at step 1500: 15.932053\n",
+      "Validation accuracy: 68.7%\n",
+      "Minibatch loss at step 1500: 15.930844\n",
       "Minibatch accuracy: 98.4%\n",
-      "Validation accuracy: 78.3%\n",
-      "Minibatch loss at step 2000: 2.794888\n",
+      "Validation accuracy: 77.5%\n",
+      "Minibatch loss at step 2000: 2.792321\n",
       "Minibatch accuracy: 95.3%\n",
-      "Validation accuracy: 79.7%\n",
-      "Minibatch loss at step 2500: 0.951144\n",
-      "Minibatch accuracy: 94.5%\n",
-      "Validation accuracy: 80.1%\n",
-      "Minibatch loss at step 3000: 0.599843\n",
+      "Validation accuracy: 79.4%\n",
+      "Minibatch loss at step 2500: 0.952886\n",
+      "Minibatch accuracy: 95.3%\n",
+      "Validation accuracy: 80.2%\n",
+      "Minibatch loss at step 3000: 0.599033\n",
       "Minibatch accuracy: 98.4%\n",
       "Validation accuracy: 80.3%\n",
       "Test accuracy: 86.8%\n"
@@ -522,6 +577,153 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 以下Problem 3的mini_dataset代码使用了dropout，以及指数衰减学习速率\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def add_layer(input_data, in_size, out_size, n_layer, activate_function=None):\n",
+    "    layer_name = 'layer%s' % n_layer\n",
+    "    with tf.name_scope(layer_name):\n",
+    "        with tf.name_scope('Weights'):\n",
+    "            Weights = tf.Variable(tf.truncated_normal([in_size, out_size]), name='W')\n",
+    "            tf.summary.histogram(layer_name + '/Weights', Weights)\n",
+    "        with tf.name_scope('biases'):\n",
+    "            biases = tf.Variable(tf.zeros([1, out_size]) + 0.1, name='b')\n",
+    "            tf.summary.histogram(layer_name + '/biases', biases)\n",
+    "        with tf.name_scope('Wx_plus_b'):\n",
+    "            Wx_plus_b = tf.matmul(input_data, Weights) + biases\n",
+    "            # dropout\n",
+    "            Wx_plus_b = tf.nn.dropout(Wx_plus_b, keep_prob)\n",
+    "            \n",
+    "        if(activate_function is None):\n",
+    "            outputs = Wx_plus_b\n",
+    "        else:\n",
+    "            outputs = activate_function(Wx_plus_b)\n",
+    "            tf.summary.histogram(layer_name + '/outputs', outputs)\n",
+    "        return outputs, Weights, biases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = 128\n",
+    "image_size = 28\n",
+    "num_labels = 10\n",
+    "hidden_unit_num1 = 1024\n",
+    "num_steps = 3001\n",
+    "\n",
+    "graph = tf.Graph()\n",
+    "with graph.as_default():\n",
+    "\n",
+    "    tf_valid_dataset = tf.constant(valid_dataset)\n",
+    "    tf_valid_labels = tf.constant(valid_labels)\n",
+    "    tf_test_dataset = tf.constant(test_dataset)\n",
+    "    tf_test_labels = tf.constant(test_labels)\n",
+    "\n",
+    "    with tf.name_scope('inputs'):\n",
+    "        # Let the shape[0] equals None\n",
+    "        tf_dataset = tf.placeholder(tf.float32, shape=(None, image_size*image_size), name='train_dataset')\n",
+    "        tf_labels = tf.placeholder(tf.float32, shape=(None, num_labels), name='train_labels')\n",
+    "        # dropout rate\n",
+    "        keep_prob = tf.placeholder(tf.float32, name='keep_prob')\n",
+    "        \n",
+    "    hidden_layer1, W1, b1 = add_layer(tf_dataset, image_size*image_size, hidden_unit_num1, n_layer=1, activate_function=tf.nn.relu)\n",
+    "    train_output, W2, b2 = add_layer(hidden_layer1, hidden_unit_num1, num_labels, n_layer=2, activate_function=None)\n",
+    "\n",
+    "    # L2 regularization, lambda = 0.02 is the best penalty rate\n",
+    "    l2_loss = tf.nn.l2_loss(W1) + tf.nn.l2_loss(W2)\n",
+    "    with tf.name_scope('loss'):\n",
+    "        loss = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(labels=tf_labels, logits=train_output)) + 0.02 * l2_loss\n",
+    "    with tf.name_scope('train_optimizer'):\n",
+    "        # use exponential decay learning rate\n",
+    "        global_step = tf.Variable(0)\n",
+    "        starter_learning_rate = 0.1\n",
+    "        learning_rate = tf.train.exponential_decay(starter_learning_rate, global_step,\n",
+    "                                           100000, 0.96, staircase=True)\n",
+    "        optimizer = tf.train.GradientDescentOptimizer(learning_rate).minimize(loss)\n",
+    "\n",
+    "    train_prediction = tf.nn.softmax(train_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialized...\n",
+      "Minibatch loss at step 0: 7005.197266\n",
+      "Minibatch accuracy: 11.7%\n",
+      "Validation accuracy: 19.0%\n",
+      "Minibatch loss at step 500: 845.397095\n",
+      "Minibatch accuracy: 48.4%\n",
+      "Validation accuracy: 80.6%\n",
+      "Minibatch loss at step 1000: 114.750366\n",
+      "Minibatch accuracy: 59.4%\n",
+      "Validation accuracy: 81.0%\n",
+      "Minibatch loss at step 1500: 16.439709\n",
+      "Minibatch accuracy: 57.8%\n",
+      "Validation accuracy: 81.6%\n",
+      "Minibatch loss at step 2000: 3.571550\n",
+      "Minibatch accuracy: 52.3%\n",
+      "Validation accuracy: 81.6%\n",
+      "Minibatch loss at step 2500: 1.678931\n",
+      "Minibatch accuracy: 53.1%\n",
+      "Validation accuracy: 81.8%\n",
+      "Minibatch loss at step 3000: 1.334671\n",
+      "Minibatch accuracy: 58.6%\n",
+      "Validation accuracy: 82.0%\n",
+      "Test accuracy: 88.0%\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_steps = 3001\n",
+    "\n",
+    "with tf.Session(graph=graph) as sess:\n",
+    "    tf.global_variables_initializer().run()\n",
+    "    \n",
+    "    writer = tf.summary.FileWriter(\"logs/\", sess.graph)\n",
+    "    merged = tf.summary.merge_all()\n",
+    "    \n",
+    "    print('Initialized...')\n",
+    "    for step in range(num_steps):\n",
+    "        # 使用dataset_small训练，一定要修改以下三行代码中的train_dataset_small和train_labels_small\n",
+    "        offset = (step * batch_size) % (train_dataset_small.shape[0] - batch_size)\n",
+    "        batch_data = train_dataset_small[offset:(offset + batch_size), :]\n",
+    "        batch_labels = train_labels_small[offset:(offset + batch_size), :]\n",
+    "        \n",
+    "        train_feed_dict = {tf_dataset : batch_data, tf_labels : batch_labels, keep_prob: 0.5}\n",
+    "        _, l, predictions = sess.run([optimizer, loss, train_prediction], feed_dict=train_feed_dict)\n",
+    "        \n",
+    "        valid_feed_dict = {tf_dataset: valid_dataset, tf_labels: valid_labels, keep_prob: 1.0}\n",
+    "        test_feed_dict = {tf_dataset: test_dataset, tf_labels: test_labels, keep_prob: 1.0}\n",
+    "        \n",
+    "        if (step % 500 == 0):\n",
+    "            print(\"Minibatch loss at step %d: %f\" % (step, l))\n",
+    "            print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
+    "            print(\"Validation accuracy: %.1f%%\" % accuracy(train_prediction.eval(feed_dict=valid_feed_dict), valid_labels))\n",
+    "    print(\"Test accuracy: %.1f%%\" % accuracy(train_prediction.eval(feed_dict=test_feed_dict), test_labels))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "-b1hTz3VWZjw"
@@ -542,6 +744,15 @@
     "    optimizer = tf.train.GradientDescentOptimizer(learning_rate).minimize(loss, global_step=global_step)\n",
     " \n",
     " ---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The change has implementation in the above code.\n",
+    "\n",
+    "In summary, if you want to get more higher accuracy, you should use more layers' neural network, and test the learing rate."
    ]
   }
  ],
