--- a/3_regularization.ipynb
+++ b/3_regularization.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 1,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 3,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 4,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -241,8 +241,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def add_layer(input_data, in_size, out_size, n_layer, activate_function=None):\n",
@@ -269,8 +271,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "batch_size = 128\n",
@@ -325,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -333,28 +337,28 @@
      "output_type": "stream",
      "text": [
       "Initialized...\n",
-      "Minibatch loss at step 0: 7068.360352\n",
-      "Minibatch accuracy: 11.7%\n",
-      "Validation accuracy: 19.9%\n",
-      "Minibatch loss at step 500: 844.717102\n",
-      "Minibatch accuracy: 49.2%\n",
-      "Validation accuracy: 82.4%\n",
-      "Minibatch loss at step 1000: 114.174622\n",
-      "Minibatch accuracy: 42.2%\n",
-      "Validation accuracy: 83.5%\n",
-      "Minibatch loss at step 1500: 16.587553\n",
-      "Minibatch accuracy: 49.2%\n",
-      "Validation accuracy: 83.9%\n",
-      "Minibatch loss at step 2000: 3.516756\n",
-      "Minibatch accuracy: 53.1%\n",
+      "Minibatch loss at step 0: 7005.014648\n",
+      "Minibatch accuracy: 15.6%\n",
+      "Validation accuracy: 20.0%\n",
+      "Minibatch loss at step 500: 842.001587\n",
+      "Minibatch accuracy: 50.8%\n",
+      "Validation accuracy: 82.2%\n",
+      "Minibatch loss at step 1000: 114.146606\n",
+      "Minibatch accuracy: 36.7%\n",
+      "Validation accuracy: 83.6%\n",
+      "Minibatch loss at step 1500: 16.468220\n",
+      "Minibatch accuracy: 52.3%\n",
+      "Validation accuracy: 84.0%\n",
+      "Minibatch loss at step 2000: 3.534226\n",
+      "Minibatch accuracy: 53.9%\n",
+      "Validation accuracy: 83.3%\n",
+      "Minibatch loss at step 2500: 1.740231\n",
+      "Minibatch accuracy: 48.4%\n",
       "Validation accuracy: 83.4%\n",
-      "Minibatch loss at step 2500: 1.791932\n",
-      "Minibatch accuracy: 47.7%\n",
-      "Validation accuracy: 83.2%\n",
-      "Minibatch loss at step 3000: 1.519345\n",
-      "Minibatch accuracy: 51.6%\n",
-      "Validation accuracy: 83.2%\n",
-      "Test accuracy: 89.3%\n"
+      "Minibatch loss at step 3000: 1.413204\n",
+      "Minibatch accuracy: 53.9%\n",
+      "Validation accuracy: 83.0%\n",
+      "Test accuracy: 89.0%\n"
      ]
     }
    ],
@@ -461,7 +465,9 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "batch_size = 128\n",
@@ -616,7 +622,9 @@
   {
    "cell_type": "code",
    "execution_count": 202,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "batch_size = 128\n",
