'word2vec_WIP2'

--- a/5_word2vec.ipynb
+++ b/5_word2vec.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -201,8 +201,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `collections`模块方法统计单词频次\n",
+    "---\n",
+    "`count`列表中，存储各个单词与出现频次的`tuple`（第一个是'Unknown'单词与出现频率，'Unknown'是出现频次）。\n",
+    "`collections.Counter()`返回一个计数器实例，统计words中所有单词的出现频次，调用`most_common(n)`方法会以列表的形式返回计数的前n个结果，每个列表元素是单词与出现频次组成的`tuple`。"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 11,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -241,8 +251,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
       "Most common words (+UNK) [['UNK', 418391], ('the', 1061396), ('of', 593677), ('and', 416629), ('one', 411764)]\n",
-      "Sample data [5243, 3083, 12, 6, 195, 2, 3136, 46, 59, 156]\n"
+      "Sample data [5234, 3081, 12, 6, 195, 2, 3134, 46, 59, 156]\n"
      ]
     }
    ],
@@ -251,12 +271,24 @@
     "\n",
     "def build_dataset(words):\n",
     "  count = [['UNK', -1]]\n",
+    "\n",
     "  count.extend(collections.Counter(words).most_common(vocabulary_size - 1))\n",
     "  dictionary = dict()\n",
+    "\n",
+    "  dictionary_test = dict()\n",
+    "  count_test = count[0:10]\n",
+    "  for word, _ in count_test:\n",
+    "    print(len(dictionary_test))\n",
+    "    dictionary_test[word] = len(dictionary_test)\n",
+    "\n",
+    "  # dictionary[word]中对应的value是每个单词的index，一共是出现频次最多的49999个单词\n",
+    "  # 第一个是'unknown',也就是低频词\n",
     "  for word, _ in count:\n",
     "    dictionary[word] = len(dictionary)\n",
     "  data = list()\n",
     "  unk_count = 0\n",
+    "  # 这里的index，是在整个数据集words中单词对应的dictionary中的单词序号。如果该单词不\n",
+    "  # 在dictionary中（也就是被排除在前49999之外的低频词），则序号为0（即dictionary['UNK']）\n",
     "  for word in words:\n",
     "    if word in dictionary:\n",
     "      index = dictionary[word]\n",
@@ -286,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 12,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -329,11 +361,11 @@
       "\n",
       "with num_skips = 2 and skip_window = 1:\n",
       "    batch: ['originated', 'originated', 'as', 'as', 'a', 'a', 'term', 'term']\n",
-      "    labels: ['as', 'anarchism', 'a', 'originated', 'term', 'as', 'a', 'of']\n",
+      "    labels: ['anarchism', 'as', 'a', 'originated', 'term', 'as', 'of', 'a']\n",
       "\n",
       "with num_skips = 4 and skip_window = 2:\n",
       "    batch: ['as', 'as', 'as', 'as', 'a', 'a', 'a', 'a']\n",
-      "    labels: ['anarchism', 'originated', 'term', 'a', 'as', 'of', 'originated', 'term']\n"
+      "    labels: ['anarchism', 'a', 'originated', 'term', 'as', 'originated', 'of', 'term']\n"
      ]
     }
    ],
