'generate_batch_finished'

--- a/5_word2vec.ipynb
+++ b/5_word2vec.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -251,6 +251,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "50000\n",
       "Most common words (+UNK) [['UNK', 418391], ('the', 1061396), ('of', 593677), ('and', 416629), ('one', 411764)]\n",
       "Sample data [5234, 3081, 12, 6, 195, 2, 3134, 46, 59, 156]\n"
      ]
@@ -309,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -352,11 +353,11 @@
       "\n",
       "with num_skips = 2 and skip_window = 1:\n",
       "    batch: ['originated', 'originated', 'as', 'as', 'a', 'a', 'term', 'term']\n",
-      "    labels: ['as', 'anarchism', 'a', 'originated', 'term', 'as', 'a', 'of']\n",
+      "    labels: ['anarchism', 'as', 'a', 'originated', 'as', 'term', 'a', 'of']\n",
       "\n",
       "with num_skips = 4 and skip_window = 2:\n",
       "    batch: ['as', 'as', 'as', 'as', 'a', 'a', 'a', 'a']\n",
-      "    labels: ['anarchism', 'a', 'term', 'originated', 'of', 'originated', 'as', 'term']\n"
+      "    labels: ['originated', 'term', 'a', 'anarchism', 'as', 'of', 'term', 'originated']\n"
      ]
     }
    ],
@@ -378,11 +379,18 @@
     "    target = skip_window  # target label at the center of the buffer\n",
     "    targets_to_avoid = [ skip_window ]\n",
     "    for j in range(num_skips):\n",
+    "      # 这里这一步循环，是为了打乱中心词与上下文词的排列顺序，不再按照原来buffer中的顺序排列，而是随机排列\n",
     "      while target in targets_to_avoid:\n",
     "        target = random.randint(0, span - 1)\n",
     "      targets_to_avoid.append(target)\n",
+    "      # 记录中心词\n",
     "      batch[i * num_skips + j] = buffer[skip_window]\n",
+    "      # 记录输入数据对应的上下文词\n",
     "      labels[i * num_skips + j, 0] = buffer[target]\n",
+    "    # 这里如果一个batch_size超过num_skips时，每循环一次，中心词会向后移动一个。由于\n",
+    "    # buffer的maxlen=span且已经存储满，这里append将会挤掉第一个词，从而形成新中心词\n",
+    "    # 的Window，也就是说，batch和labels将会存储 batch_size // num_skips 个中心词与其\n",
+    "    # 上下文词的组合\n",
     "    buffer.append(data[data_index])\n",
     "    data_index = (data_index + 1) % len(data)\n",
     "  return batch, labels\n",
