VGG-learning-WIP

--- a/VGG.ipynb
+++ b/VGG.ipynb
@@ -35,6 +35,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### tf.get_variable(name, shape, initializer, trainable)\n",
+    "`name`是变量的名称，`shape`是变量的维度，`initializer`是初始化函数。`trainable`如果为 True，还将变量添加到图形集`GraphKeys.TRAINABLE_VARIABLES`。一般`initializer`初始化的方式有以下几种：\n",
+    "\n",
+    "+ tf.constant_initializer：常量初始化函数\n",
+    "+ tf.random_normal_initializer：随机正态分布\n",
+    "+ tf.truncated_normal_initializer：截取的正态分布\n",
+    "+ tf.random_uniform_initializer：均匀分布\n",
+    "+ tf.zeros_initializer：全都是0\n",
+    "+ tf.ones_initializer：全都是1\n",
+    "+ tf.uniform_unit_scaling_initializer：满足均匀分布，但不影响输出数量级的随机值\n",
+    "\n",
+    "当然，tf.contrib.layers里还提供了一些其他的方法，例如这里使用的`tf.contrib.layer.xavier_initializer(uniform=True, seed=None, dtype=tf.float32)`。\n",
+    "该函数返回一个用于初始化权重的初始化程序`Xavier`，这个初始化器可以保持每一层的梯度大小都差不多相同。\n",
+    "\n",
+    "参数：\n",
+    "\n",
+    "    + uniform：使用uniform或者normal分布随机初始化\n",
+    "    + seed：用来生成随机数的seed\n",
+    "    + dtype：只支持浮点数\n",
+    "    \n",
+    "返回值：\n",
+    "    初始化权重矩阵"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -52,7 +80,22 @@
     "        stride: A list of ints. 1-D of length 4. VGG paper used: [1, 1, 1, 1]\n",
     "    Returns:\n",
     "        4D tensor\n",
-    "    '''"
+    "    '''\n",
+    "    # x.get_shape()得到x tensor的尺寸（返回一个list），最后一个元素是x的通道数\n",
+    "    in_channels = x.get_shape()[-1]\n",
+    "    with tf.variable.scope(layer_name):\n",
+    "        w = tf.get_variable(name='weights',\n",
+    "                           trainable=is_pretrain,\n",
+    "                           shape=[kernel_size[0], kernel_size[1], in_channels, out_channels],\n",
+    "                           initializer=tf.contrib.layers.xavier_initializer())\n",
+    "        b = tf.get_variable(name='biases',\n",
+    "                           trainable=is_pretrain,\n",
+    "                           shape=[out_channels],\n",
+    "                           initializer=tf.constant_initializer(0, 0))\n",
+    "        x = tf.nn.conv2d(x, w, stride, padding='SAME', name='conv')\n",
+    "        x = tf.nn.bias_add(x, b, name='bias_add')\n",
+    "        x = tf.nn.relu(x, name='relu')\n",
+    "        return x"
    ]
   }
  ],
