--- a/5_word2vec.ipynb
+++ b/5_word2vec.ipynb
@@ -841,7 +841,7 @@
     "num_points = 800\n",
     "\n",
     "# 如果向量空间维数过高，建议先使用PCA降维降至50维左右，再使用t-SNE降至二维或三维，因为\n",
-    "# 直接使用t-SNE给高位向量空间做香味，效率比较低\n",
+    "# 直接使用t-SNE给高位向量空间做降维，效率比较低\n",
     "tsne = TSNE(perplexity=30, n_components=2, init='pca', n_iter=5000, method='exact')\n",
     "two_d_embeddings = tsne.fit_transform(final_embeddings[1:num_points+1, :])"
    ]
@@ -939,7 +939,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data_index = 0\n",
@@ -993,7 +995,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "batch_size = 128\n",
